# webserver

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
config/: settings.py  storage.py  urls.py
nst/: admin.py  apps.py  models.py  services.py  urls.py  views.py
nst/migrations/: 0001_initial.py  0002_alter_picmodel_name.py
static/css/: base.css  category.css  detail.css  index.css  list.css  result.css
templates/: base.html  category.html  detail.html  index.html  list.html  result.html  search.html
