[tool.poetry]
name = "team6_webserver"
version = "0.1.0"
description = ""
authors = ["GrolarKim <audwnswmf@naver.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
Django = "^4.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
