[tool.poetry]
name = "team6_webserver"
version = "0.1.0"
description = ""
authors = ["GrolarKim <audwnswmf@naver.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyMySQL = "^1.0.2"
mysql = "^0.0.3"
boto3 = "^1.21.4"
Django = "^4.0.2"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
